Added $grace to root notify templates

--- a/ldap_notify/templates/notify.tmpl.html
+++ b/ldap_notify/templates/notify.tmpl.html
@@ -10,6 +10,9 @@
 		your $object is going to expire within $days_left days on $expiry_date.
 		</p>
 		<p>
+		You still have $grace logins left.
+		</p>
+		<p>
 		Best regards,
 		&nsbp;Your Admin Team
 		</p>
